# Budget-Buddy

client/: api.js  app.js  auth.js  dashboard.js  index.html  styles.css  ui.js
server/: .env  CMakeLists.txt  main.cpp
server/managers/: AnalyticsManager.cpp  AnalyticsManager.h  AuthManager.cpp  AuthManager.h  DBManager.cpp  DBManager.h  ExpenseManager.cpp  ExpenseManager.h  TransactionManager.cpp  TransactionManager.h  UserSessionManager.cpp  UserSessionManager.h
